pushing final modal changes

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "4a093f0f-521c-4519-94f3-d02d8c26d010",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0ced5f98-3810-48b6-9cae-d04d627b68c1",
    "metadata": {},
    "outputs": [],
@@ -26,28 +26,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0171ea6f-78fc-46e1-af14-f181751ae701",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['room speical room twin', 'room speical room twin', 1],\n",
-       " ['standard double or twin', 'studio with terrace', 0],\n",
-       " ['studio 1 double bed', 'threebedroom apartment', 0],\n",
-       " ['standard double room 1 queen bed', 'queen room', 1],\n",
-       " ['cottage 1 queen bed ensuite mountain view vinkel',\n",
-       "  'cottage 1 queen bed ensuite mountain view vinkel',\n",
+       "[['apartment 2 bedrooms', 'apartment', 1],\n",
+       " ['apartment ensuite 62209', 'apartment ensuite 62209', 1],\n",
+       " ['family studio suite city view', 'family studio suite', 1],\n",
+       " ['deluxe double room terrace', 'holiday home', 0],\n",
+       " ['quadruple room 2 double beds refrigerator microwave ocean view',\n",
+       "  'onebedroom apartment',\n",
+       "  0],\n",
+       " ['presidential apartment private bathroom 3',\n",
+       "  'presidential apartment private bathroom 3 no pets',\n",
        "  1],\n",
-       " ['classic room', 'classic apartment', 0],\n",
-       " ['single room without ac', 'single room without ac', 1],\n",
-       " ['double room puerto viejo', 'apartment', 0],\n",
-       " ['himmapana hills 2 bedroom villa', 'himmapana hills 2 bedroom villa', 1],\n",
-       " ['deluxe room 2 double beds', 'fivebedroom house', 0]]"
+       " ['family room spa access', 'family room spa access', 1],\n",
+       " ['junior suite 2 queen beds accessible refrigerator microwave',\n",
+       "  'sixbedroom house',\n",
+       "  0],\n",
+       " ['appartraum', 'appartraum', 1],\n",
+       " ['twin room with views', 'onebedroom apartment', 0]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "452f2bc6-9210-4ea2-80cc-3b476fdfe110",
    "metadata": {},
    "outputs": [],
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "74f4dfd4-a9a9-4a82-a8b5-9598d9ee45bf",
    "metadata": {},
    "outputs": [
@@ -111,42 +115,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-logloss:0.45526\n",
-      "[1]\tvalidation_0-logloss:0.32329\n",
-      "[2]\tvalidation_0-logloss:0.24001\n",
-      "[3]\tvalidation_0-logloss:0.18456\n",
-      "[4]\tvalidation_0-logloss:0.14712\n",
-      "[5]\tvalidation_0-logloss:0.12023\n",
-      "[6]\tvalidation_0-logloss:0.10193\n",
-      "[7]\tvalidation_0-logloss:0.08798\n",
-      "[8]\tvalidation_0-logloss:0.07796\n",
-      "[9]\tvalidation_0-logloss:0.07147\n",
-      "[10]\tvalidation_0-logloss:0.06571\n",
-      "[11]\tvalidation_0-logloss:0.06149\n",
-      "[12]\tvalidation_0-logloss:0.05943\n",
-      "[13]\tvalidation_0-logloss:0.05786\n",
-      "[14]\tvalidation_0-logloss:0.05671\n",
-      "[15]\tvalidation_0-logloss:0.05548\n",
-      "[16]\tvalidation_0-logloss:0.05512\n",
-      "[17]\tvalidation_0-logloss:0.05505\n",
-      "[18]\tvalidation_0-logloss:0.05445\n",
-      "[19]\tvalidation_0-logloss:0.05505\n",
-      "[20]\tvalidation_0-logloss:0.05504\n",
-      "[21]\tvalidation_0-logloss:0.05471\n",
-      "[22]\tvalidation_0-logloss:0.05502\n",
-      "[23]\tvalidation_0-logloss:0.05527\n",
-      "[24]\tvalidation_0-logloss:0.05680\n",
-      "[25]\tvalidation_0-logloss:0.05702\n",
-      "[26]\tvalidation_0-logloss:0.05703\n",
-      "[27]\tvalidation_0-logloss:0.05844\n",
-      "[28]\tvalidation_0-logloss:0.05902\n"
+      "[0]\tvalidation_0-logloss:0.45866\n",
+      "[1]\tvalidation_0-logloss:0.33205\n",
+      "[2]\tvalidation_0-logloss:0.25161\n",
+      "[3]\tvalidation_0-logloss:0.19804\n",
+      "[4]\tvalidation_0-logloss:0.16158\n",
+      "[5]\tvalidation_0-logloss:0.13459\n",
+      "[6]\tvalidation_0-logloss:0.11801\n",
+      "[7]\tvalidation_0-logloss:0.10464\n",
+      "[8]\tvalidation_0-logloss:0.09455\n",
+      "[9]\tvalidation_0-logloss:0.08830\n",
+      "[10]\tvalidation_0-logloss:0.08312\n",
+      "[11]\tvalidation_0-logloss:0.08032\n",
+      "[12]\tvalidation_0-logloss:0.07757\n",
+      "[13]\tvalidation_0-logloss:0.07504\n",
+      "[14]\tvalidation_0-logloss:0.07345\n",
+      "[15]\tvalidation_0-logloss:0.07207\n",
+      "[16]\tvalidation_0-logloss:0.07099\n",
+      "[17]\tvalidation_0-logloss:0.07051\n",
+      "[18]\tvalidation_0-logloss:0.07117\n",
+      "[19]\tvalidation_0-logloss:0.07128\n",
+      "[20]\tvalidation_0-logloss:0.07069\n",
+      "[21]\tvalidation_0-logloss:0.07073\n",
+      "[22]\tvalidation_0-logloss:0.07075\n",
+      "[23]\tvalidation_0-logloss:0.07070\n",
+      "[24]\tvalidation_0-logloss:0.07208\n",
+      "[25]\tvalidation_0-logloss:0.07210\n",
+      "[26]\tvalidation_0-logloss:0.07132\n",
+      "[27]\tvalidation_0-logloss:0.07124\n",
+      "[28]\tvalidation_0-logloss:0.07174\n",
+      "[29]\tvalidation_0-logloss:0.07148\n",
+      "[30]\tvalidation_0-logloss:0.07174\n",
+      "[31]\tvalidation_0-logloss:0.07182\n",
+      "[32]\tvalidation_0-logloss:0.07206\n",
+      "[33]\tvalidation_0-logloss:0.07269\n",
+      "[34]\tvalidation_0-logloss:0.07252\n",
+      "[35]\tvalidation_0-logloss:0.07251\n",
+      "[36]\tvalidation_0-logloss:0.07286\n",
+      "[37]\tvalidation_0-logloss:0.07260\n",
+      "[38]\tvalidation_0-logloss:0.07418\n",
+      "[39]\tvalidation_0-logloss:0.07461\n",
+      "[40]\tvalidation_0-logloss:0.07348\n",
+      "[41]\tvalidation_0-logloss:0.07354\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shekhar/shekhar/CUPIDApi/.venv/lib/python3.12/site-packages/xgboost/training.py:183: UserWarning: [17:13:31] WARNING: /workspace/src/learner.cc:738: \n",
+      "/home/shekhar/shekhar/CUPIDApi/.venv/lib/python3.12/site-packages/xgboost/training.py:183: UserWarning: [20:32:22] WARNING: /workspace/src/learner.cc:738: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
@@ -156,91 +173,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[29]\tvalidation_0-logloss:0.05944\n",
-      "[30]\tvalidation_0-logloss:0.05950\n",
-      "[31]\tvalidation_0-logloss:0.05937\n",
-      "[32]\tvalidation_0-logloss:0.05929\n",
-      "[33]\tvalidation_0-logloss:0.05977\n",
-      "[34]\tvalidation_0-logloss:0.06025\n",
-      "[35]\tvalidation_0-logloss:0.06082\n",
-      "[36]\tvalidation_0-logloss:0.06037\n",
-      "[37]\tvalidation_0-logloss:0.06098\n",
-      "[38]\tvalidation_0-logloss:0.06094\n",
-      "[39]\tvalidation_0-logloss:0.06216\n",
-      "[40]\tvalidation_0-logloss:0.06309\n",
-      "[41]\tvalidation_0-logloss:0.06362\n",
-      "[42]\tvalidation_0-logloss:0.06397\n",
-      "[43]\tvalidation_0-logloss:0.06443\n",
-      "[44]\tvalidation_0-logloss:0.06525\n",
-      "[45]\tvalidation_0-logloss:0.06569\n",
-      "[46]\tvalidation_0-logloss:0.06650\n",
-      "[47]\tvalidation_0-logloss:0.06627\n",
-      "[48]\tvalidation_0-logloss:0.06659\n",
-      "[49]\tvalidation_0-logloss:0.06715\n",
-      "[50]\tvalidation_0-logloss:0.06759\n",
-      "[51]\tvalidation_0-logloss:0.06775\n",
-      "[52]\tvalidation_0-logloss:0.06799\n",
-      "[53]\tvalidation_0-logloss:0.06820\n",
-      "[54]\tvalidation_0-logloss:0.06772\n",
-      "[55]\tvalidation_0-logloss:0.06798\n",
-      "[56]\tvalidation_0-logloss:0.06812\n",
-      "[57]\tvalidation_0-logloss:0.06776\n",
-      "[58]\tvalidation_0-logloss:0.06802\n",
-      "[59]\tvalidation_0-logloss:0.06837\n",
-      "[60]\tvalidation_0-logloss:0.06920\n",
-      "[61]\tvalidation_0-logloss:0.06934\n",
-      "[62]\tvalidation_0-logloss:0.06996\n",
-      "[63]\tvalidation_0-logloss:0.07032\n",
-      "[64]\tvalidation_0-logloss:0.07077\n",
-      "[65]\tvalidation_0-logloss:0.07121\n",
-      "[66]\tvalidation_0-logloss:0.07114\n",
-      "[67]\tvalidation_0-logloss:0.07157\n",
-      "[68]\tvalidation_0-logloss:0.07170\n",
-      "[69]\tvalidation_0-logloss:0.07173\n",
-      "[70]\tvalidation_0-logloss:0.07190\n",
-      "[71]\tvalidation_0-logloss:0.07239\n",
-      "[72]\tvalidation_0-logloss:0.07218\n",
-      "[73]\tvalidation_0-logloss:0.07235\n",
-      "[74]\tvalidation_0-logloss:0.07210\n",
-      "[75]\tvalidation_0-logloss:0.07187\n",
-      "[76]\tvalidation_0-logloss:0.07219\n",
-      "[77]\tvalidation_0-logloss:0.07232\n",
-      "[78]\tvalidation_0-logloss:0.07276\n",
-      "[79]\tvalidation_0-logloss:0.07286\n",
-      "[80]\tvalidation_0-logloss:0.07286\n",
-      "[81]\tvalidation_0-logloss:0.07287\n",
-      "[82]\tvalidation_0-logloss:0.07290\n",
-      "[83]\tvalidation_0-logloss:0.07320\n",
-      "[84]\tvalidation_0-logloss:0.07332\n",
-      "[85]\tvalidation_0-logloss:0.07328\n",
-      "[86]\tvalidation_0-logloss:0.07313\n",
-      "[87]\tvalidation_0-logloss:0.07319\n",
-      "[88]\tvalidation_0-logloss:0.07368\n",
-      "[89]\tvalidation_0-logloss:0.07414\n",
-      "[90]\tvalidation_0-logloss:0.07439\n",
-      "[91]\tvalidation_0-logloss:0.07473\n",
-      "[92]\tvalidation_0-logloss:0.07479\n",
-      "[93]\tvalidation_0-logloss:0.07495\n",
-      "[94]\tvalidation_0-logloss:0.07518\n",
-      "[95]\tvalidation_0-logloss:0.07553\n",
-      "[96]\tvalidation_0-logloss:0.07597\n",
-      "[97]\tvalidation_0-logloss:0.07603\n",
-      "[98]\tvalidation_0-logloss:0.07643\n",
-      "[99]\tvalidation_0-logloss:0.07686\n",
+      "[42]\tvalidation_0-logloss:0.07413\n",
+      "[43]\tvalidation_0-logloss:0.07430\n",
+      "[44]\tvalidation_0-logloss:0.07453\n",
+      "[45]\tvalidation_0-logloss:0.07459\n",
+      "[46]\tvalidation_0-logloss:0.07452\n",
+      "[47]\tvalidation_0-logloss:0.07442\n",
+      "[48]\tvalidation_0-logloss:0.07454\n",
+      "[49]\tvalidation_0-logloss:0.07504\n",
+      "[50]\tvalidation_0-logloss:0.07518\n",
+      "[51]\tvalidation_0-logloss:0.07588\n",
+      "[52]\tvalidation_0-logloss:0.07622\n",
+      "[53]\tvalidation_0-logloss:0.07699\n",
+      "[54]\tvalidation_0-logloss:0.07712\n",
+      "[55]\tvalidation_0-logloss:0.07695\n",
+      "[56]\tvalidation_0-logloss:0.07727\n",
+      "[57]\tvalidation_0-logloss:0.07750\n",
+      "[58]\tvalidation_0-logloss:0.07785\n",
+      "[59]\tvalidation_0-logloss:0.07836\n",
+      "[60]\tvalidation_0-logloss:0.07806\n",
+      "[61]\tvalidation_0-logloss:0.07778\n",
+      "[62]\tvalidation_0-logloss:0.07815\n",
+      "[63]\tvalidation_0-logloss:0.07797\n",
+      "[64]\tvalidation_0-logloss:0.07817\n",
+      "[65]\tvalidation_0-logloss:0.07802\n",
+      "[66]\tvalidation_0-logloss:0.07847\n",
+      "[67]\tvalidation_0-logloss:0.07869\n",
+      "[68]\tvalidation_0-logloss:0.07926\n",
+      "[69]\tvalidation_0-logloss:0.07982\n",
+      "[70]\tvalidation_0-logloss:0.07993\n",
+      "[71]\tvalidation_0-logloss:0.08027\n",
+      "[72]\tvalidation_0-logloss:0.08059\n",
+      "[73]\tvalidation_0-logloss:0.08041\n",
+      "[74]\tvalidation_0-logloss:0.08051\n",
+      "[75]\tvalidation_0-logloss:0.08084\n",
+      "[76]\tvalidation_0-logloss:0.08156\n",
+      "[77]\tvalidation_0-logloss:0.08124\n",
+      "[78]\tvalidation_0-logloss:0.08173\n",
+      "[79]\tvalidation_0-logloss:0.08229\n",
+      "[80]\tvalidation_0-logloss:0.08246\n",
+      "[81]\tvalidation_0-logloss:0.08283\n",
+      "[82]\tvalidation_0-logloss:0.08238\n",
+      "[83]\tvalidation_0-logloss:0.08222\n",
+      "[84]\tvalidation_0-logloss:0.08267\n",
+      "[85]\tvalidation_0-logloss:0.08276\n",
+      "[86]\tvalidation_0-logloss:0.08270\n",
+      "[87]\tvalidation_0-logloss:0.08283\n",
+      "[88]\tvalidation_0-logloss:0.08320\n",
+      "[89]\tvalidation_0-logloss:0.08324\n",
+      "[90]\tvalidation_0-logloss:0.08351\n",
+      "[91]\tvalidation_0-logloss:0.08375\n",
+      "[92]\tvalidation_0-logloss:0.08408\n",
+      "[93]\tvalidation_0-logloss:0.08415\n",
+      "[94]\tvalidation_0-logloss:0.08405\n",
+      "[95]\tvalidation_0-logloss:0.08395\n",
+      "[96]\tvalidation_0-logloss:0.08385\n",
+      "[97]\tvalidation_0-logloss:0.08405\n",
+      "[98]\tvalidation_0-logloss:0.08402\n",
+      "[99]\tvalidation_0-logloss:0.08434\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.97      0.98       409\n",
-      "           1       0.97      0.99      0.98       391\n",
+      "           0       0.99      0.96      0.97       405\n",
+      "           1       0.96      0.99      0.97       395\n",
       "\n",
-      "    accuracy                           0.98       800\n",
-      "   macro avg       0.98      0.98      0.98       800\n",
-      "weighted avg       0.98      0.98      0.98       800\n",
+      "    accuracy                           0.97       800\n",
+      "   macro avg       0.97      0.97      0.97       800\n",
+      "weighted avg       0.97      0.97      0.97       800\n",
       "\n",
-      "Accuracy: 0.9800\n",
+      "Accuracy: 0.9738\n",
       "Confusion Matrix:\n",
-      "[[395  14]\n",
-      " [  2 389]]\n"
+      "[[389  16]\n",
+      " [  5 390]]\n"
      ]
     }
    ],
@@ -280,23 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "44cb66c5-6ee8-4794-8dc7-bc42be0835c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature importances: [0.6255156  0.04862132 0.29742002 0.02844303]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "dc11fe4d-d5dd-4ac6-bc7d-f3978c618ac8",
    "metadata": {},
    "outputs": [
@@ -304,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature importances: [0.60646695 0.04998904 0.31703532 0.02650871]\n"
+      "Feature importances: [0.6288842  0.05110995 0.29283082 0.02717502]\n"
      ]
     }
    ],
@@ -314,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "b710cea2-8346-441e-853d-ae7bfc511a31",
    "metadata": {},
    "outputs": [],
@@ -330,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "c3616b48-a2bd-4a66-a72b-bdd0ea907b74",
    "metadata": {},
    "outputs": [
@@ -338,12 +334,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classic Room - Olympic Queen Bed - ROOM ONLY → **NO MATCH** (outlier) (score=0.94)\n",
+      "Classic Room - Olympic Queen Bed - ROOM ONLY → **NO MATCH** (outlier) (score=0.91)\n",
       "CLASSIC ROOM ADA - ROOM ONLY → **MATCH** with \"Classic Room\" (score=1.00)\n",
-      "SUPERIOR ROOM ADA - ROOM ONLY → **NO MATCH** (outlier) (score=0.97)\n",
-      "Superior Room - Olympic Queen Bed - ROOM ONLY → **NO MATCH** (outlier) (score=0.95)\n",
+      "SUPERIOR ROOM ADA - ROOM ONLY → **NO MATCH** (outlier) (score=0.67)\n",
+      "Superior Room - Olympic Queen Bed - ROOM ONLY → **NO MATCH** (outlier) (score=0.96)\n",
       "Superior City View - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Superior Room with City View\" (score=1.00)\n",
-      "Balcony Room - Olympic Queen Bed - ROOM ONLY → **NO MATCH** (outlier) (score=0.95)\n"
+      "Balcony Room - Olympic Queen Bed - ROOM ONLY → **NO MATCH** (outlier) (score=0.96)\n"
      ]
     }
    ],
