--- a/notebooks/model2.ipynb.ipynb
+++ b/notebooks/model2.ipynb.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "9973b0c7-2fd7-4c0d-af5f-0f5966c9f9c6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "id": "fb9d576f-4b81-4bdf-93db-63f24b4f244e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "55f98a84-a492-4175-a38e-9b59d8604888",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "(4000, 1156)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "22b8d604-a716-4837-a254-542ac1f7037a",
    "metadata": {},
    "outputs": [
@@ -130,14 +130,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-logloss:0.46611\n"
+      "[0]\tvalidation_0-logloss:0.45902\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shekhar/shekhar/CUPIDApi/.venv/lib/python3.12/site-packages/xgboost/training.py:183: UserWarning: [21:51:52] WARNING: /workspace/src/learner.cc:738: \n",
+      "/home/shekhar/shekhar/CUPIDApi/.venv/lib/python3.12/site-packages/xgboost/training.py:183: UserWarning: [20:34:46] WARNING: /workspace/src/learner.cc:738: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
@@ -147,119 +147,119 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\tvalidation_0-logloss:0.33459\n",
-      "[2]\tvalidation_0-logloss:0.25027\n",
-      "[3]\tvalidation_0-logloss:0.19776\n",
-      "[4]\tvalidation_0-logloss:0.15966\n",
-      "[5]\tvalidation_0-logloss:0.13295\n",
-      "[6]\tvalidation_0-logloss:0.11481\n",
-      "[7]\tvalidation_0-logloss:0.10090\n",
-      "[8]\tvalidation_0-logloss:0.09286\n",
-      "[9]\tvalidation_0-logloss:0.08411\n",
-      "[10]\tvalidation_0-logloss:0.08099\n",
-      "[11]\tvalidation_0-logloss:0.07897\n",
-      "[12]\tvalidation_0-logloss:0.07712\n",
-      "[13]\tvalidation_0-logloss:0.07593\n",
-      "[14]\tvalidation_0-logloss:0.07532\n",
-      "[15]\tvalidation_0-logloss:0.07655\n",
-      "[16]\tvalidation_0-logloss:0.07469\n",
-      "[17]\tvalidation_0-logloss:0.07495\n",
-      "[18]\tvalidation_0-logloss:0.07471\n",
-      "[19]\tvalidation_0-logloss:0.07463\n",
-      "[20]\tvalidation_0-logloss:0.07504\n",
-      "[21]\tvalidation_0-logloss:0.07623\n",
-      "[22]\tvalidation_0-logloss:0.07618\n",
-      "[23]\tvalidation_0-logloss:0.07628\n",
-      "[24]\tvalidation_0-logloss:0.07702\n",
-      "[25]\tvalidation_0-logloss:0.07729\n",
-      "[26]\tvalidation_0-logloss:0.07725\n",
-      "[27]\tvalidation_0-logloss:0.07758\n",
-      "[28]\tvalidation_0-logloss:0.07737\n",
-      "[29]\tvalidation_0-logloss:0.07761\n",
-      "[30]\tvalidation_0-logloss:0.07807\n",
-      "[31]\tvalidation_0-logloss:0.07803\n",
-      "[32]\tvalidation_0-logloss:0.07784\n",
-      "[33]\tvalidation_0-logloss:0.07818\n",
-      "[34]\tvalidation_0-logloss:0.07825\n",
-      "[35]\tvalidation_0-logloss:0.07796\n",
-      "[36]\tvalidation_0-logloss:0.07859\n",
-      "[37]\tvalidation_0-logloss:0.07890\n",
-      "[38]\tvalidation_0-logloss:0.07902\n",
-      "[39]\tvalidation_0-logloss:0.07944\n",
-      "[40]\tvalidation_0-logloss:0.07964\n",
-      "[41]\tvalidation_0-logloss:0.07970\n",
-      "[42]\tvalidation_0-logloss:0.07918\n",
-      "[43]\tvalidation_0-logloss:0.08025\n",
-      "[44]\tvalidation_0-logloss:0.08030\n",
-      "[45]\tvalidation_0-logloss:0.08091\n",
-      "[46]\tvalidation_0-logloss:0.08124\n",
-      "[47]\tvalidation_0-logloss:0.08163\n",
-      "[48]\tvalidation_0-logloss:0.08133\n",
-      "[49]\tvalidation_0-logloss:0.08147\n",
-      "[50]\tvalidation_0-logloss:0.08189\n",
-      "[51]\tvalidation_0-logloss:0.08140\n",
-      "[52]\tvalidation_0-logloss:0.08164\n",
-      "[53]\tvalidation_0-logloss:0.08086\n",
-      "[54]\tvalidation_0-logloss:0.08084\n",
-      "[55]\tvalidation_0-logloss:0.08089\n",
-      "[56]\tvalidation_0-logloss:0.08129\n",
-      "[57]\tvalidation_0-logloss:0.08138\n",
-      "[58]\tvalidation_0-logloss:0.08163\n",
-      "[59]\tvalidation_0-logloss:0.08150\n",
-      "[60]\tvalidation_0-logloss:0.08148\n",
-      "[61]\tvalidation_0-logloss:0.08162\n",
-      "[62]\tvalidation_0-logloss:0.08131\n",
-      "[63]\tvalidation_0-logloss:0.08127\n",
-      "[64]\tvalidation_0-logloss:0.08133\n",
-      "[65]\tvalidation_0-logloss:0.08132\n",
-      "[66]\tvalidation_0-logloss:0.08135\n",
-      "[67]\tvalidation_0-logloss:0.08140\n",
-      "[68]\tvalidation_0-logloss:0.08178\n",
-      "[69]\tvalidation_0-logloss:0.08140\n",
-      "[70]\tvalidation_0-logloss:0.08160\n",
-      "[71]\tvalidation_0-logloss:0.08125\n",
-      "[72]\tvalidation_0-logloss:0.08108\n",
-      "[73]\tvalidation_0-logloss:0.08117\n",
-      "[74]\tvalidation_0-logloss:0.08113\n",
-      "[75]\tvalidation_0-logloss:0.08128\n",
-      "[76]\tvalidation_0-logloss:0.08135\n",
-      "[77]\tvalidation_0-logloss:0.08131\n",
-      "[78]\tvalidation_0-logloss:0.08140\n",
-      "[79]\tvalidation_0-logloss:0.08151\n",
-      "[80]\tvalidation_0-logloss:0.08142\n",
-      "[81]\tvalidation_0-logloss:0.08139\n",
-      "[82]\tvalidation_0-logloss:0.08163\n",
-      "[83]\tvalidation_0-logloss:0.08166\n",
-      "[84]\tvalidation_0-logloss:0.08140\n",
-      "[85]\tvalidation_0-logloss:0.08133\n",
-      "[86]\tvalidation_0-logloss:0.08135\n",
-      "[87]\tvalidation_0-logloss:0.08127\n",
-      "[88]\tvalidation_0-logloss:0.08140\n",
-      "[89]\tvalidation_0-logloss:0.08153\n",
-      "[90]\tvalidation_0-logloss:0.08145\n",
-      "[91]\tvalidation_0-logloss:0.08150\n",
-      "[92]\tvalidation_0-logloss:0.08138\n",
-      "[93]\tvalidation_0-logloss:0.08132\n",
-      "[94]\tvalidation_0-logloss:0.08116\n",
-      "[95]\tvalidation_0-logloss:0.08120\n",
-      "[96]\tvalidation_0-logloss:0.08118\n",
-      "[97]\tvalidation_0-logloss:0.08119\n",
-      "[98]\tvalidation_0-logloss:0.08140\n",
-      "[99]\tvalidation_0-logloss:0.08154\n",
+      "[1]\tvalidation_0-logloss:0.32568\n",
+      "[2]\tvalidation_0-logloss:0.24053\n",
+      "[3]\tvalidation_0-logloss:0.18612\n",
+      "[4]\tvalidation_0-logloss:0.14900\n",
+      "[5]\tvalidation_0-logloss:0.12332\n",
+      "[6]\tvalidation_0-logloss:0.10417\n",
+      "[7]\tvalidation_0-logloss:0.09155\n",
+      "[8]\tvalidation_0-logloss:0.08110\n",
+      "[9]\tvalidation_0-logloss:0.07516\n",
+      "[10]\tvalidation_0-logloss:0.06851\n",
+      "[11]\tvalidation_0-logloss:0.06542\n",
+      "[12]\tvalidation_0-logloss:0.06208\n",
+      "[13]\tvalidation_0-logloss:0.06129\n",
+      "[14]\tvalidation_0-logloss:0.05939\n",
+      "[15]\tvalidation_0-logloss:0.05802\n",
+      "[16]\tvalidation_0-logloss:0.05605\n",
+      "[17]\tvalidation_0-logloss:0.05525\n",
+      "[18]\tvalidation_0-logloss:0.05544\n",
+      "[19]\tvalidation_0-logloss:0.05396\n",
+      "[20]\tvalidation_0-logloss:0.05285\n",
+      "[21]\tvalidation_0-logloss:0.05336\n",
+      "[22]\tvalidation_0-logloss:0.05480\n",
+      "[23]\tvalidation_0-logloss:0.05377\n",
+      "[24]\tvalidation_0-logloss:0.05425\n",
+      "[25]\tvalidation_0-logloss:0.05422\n",
+      "[26]\tvalidation_0-logloss:0.05437\n",
+      "[27]\tvalidation_0-logloss:0.05470\n",
+      "[28]\tvalidation_0-logloss:0.05454\n",
+      "[29]\tvalidation_0-logloss:0.05454\n",
+      "[30]\tvalidation_0-logloss:0.05460\n",
+      "[31]\tvalidation_0-logloss:0.05480\n",
+      "[32]\tvalidation_0-logloss:0.05449\n",
+      "[33]\tvalidation_0-logloss:0.05457\n",
+      "[34]\tvalidation_0-logloss:0.05446\n",
+      "[35]\tvalidation_0-logloss:0.05415\n",
+      "[36]\tvalidation_0-logloss:0.05410\n",
+      "[37]\tvalidation_0-logloss:0.05451\n",
+      "[38]\tvalidation_0-logloss:0.05412\n",
+      "[39]\tvalidation_0-logloss:0.05411\n",
+      "[40]\tvalidation_0-logloss:0.05424\n",
+      "[41]\tvalidation_0-logloss:0.05445\n",
+      "[42]\tvalidation_0-logloss:0.05429\n",
+      "[43]\tvalidation_0-logloss:0.05457\n",
+      "[44]\tvalidation_0-logloss:0.05534\n",
+      "[45]\tvalidation_0-logloss:0.05540\n",
+      "[46]\tvalidation_0-logloss:0.05573\n",
+      "[47]\tvalidation_0-logloss:0.05566\n",
+      "[48]\tvalidation_0-logloss:0.05555\n",
+      "[49]\tvalidation_0-logloss:0.05523\n",
+      "[50]\tvalidation_0-logloss:0.05537\n",
+      "[51]\tvalidation_0-logloss:0.05566\n",
+      "[52]\tvalidation_0-logloss:0.05520\n",
+      "[53]\tvalidation_0-logloss:0.05528\n",
+      "[54]\tvalidation_0-logloss:0.05500\n",
+      "[55]\tvalidation_0-logloss:0.05516\n",
+      "[56]\tvalidation_0-logloss:0.05528\n",
+      "[57]\tvalidation_0-logloss:0.05587\n",
+      "[58]\tvalidation_0-logloss:0.05563\n",
+      "[59]\tvalidation_0-logloss:0.05515\n",
+      "[60]\tvalidation_0-logloss:0.05541\n",
+      "[61]\tvalidation_0-logloss:0.05547\n",
+      "[62]\tvalidation_0-logloss:0.05597\n",
+      "[63]\tvalidation_0-logloss:0.05617\n",
+      "[64]\tvalidation_0-logloss:0.05603\n",
+      "[65]\tvalidation_0-logloss:0.05617\n",
+      "[66]\tvalidation_0-logloss:0.05634\n",
+      "[67]\tvalidation_0-logloss:0.05632\n",
+      "[68]\tvalidation_0-logloss:0.05665\n",
+      "[69]\tvalidation_0-logloss:0.05662\n",
+      "[70]\tvalidation_0-logloss:0.05666\n",
+      "[71]\tvalidation_0-logloss:0.05657\n",
+      "[72]\tvalidation_0-logloss:0.05631\n",
+      "[73]\tvalidation_0-logloss:0.05650\n",
+      "[74]\tvalidation_0-logloss:0.05618\n",
+      "[75]\tvalidation_0-logloss:0.05616\n",
+      "[76]\tvalidation_0-logloss:0.05617\n",
+      "[77]\tvalidation_0-logloss:0.05623\n",
+      "[78]\tvalidation_0-logloss:0.05620\n",
+      "[79]\tvalidation_0-logloss:0.05601\n",
+      "[80]\tvalidation_0-logloss:0.05621\n",
+      "[81]\tvalidation_0-logloss:0.05614\n",
+      "[82]\tvalidation_0-logloss:0.05602\n",
+      "[83]\tvalidation_0-logloss:0.05602\n",
+      "[84]\tvalidation_0-logloss:0.05636\n",
+      "[85]\tvalidation_0-logloss:0.05633\n",
+      "[86]\tvalidation_0-logloss:0.05607\n",
+      "[87]\tvalidation_0-logloss:0.05608\n",
+      "[88]\tvalidation_0-logloss:0.05625\n",
+      "[89]\tvalidation_0-logloss:0.05655\n",
+      "[90]\tvalidation_0-logloss:0.05679\n",
+      "[91]\tvalidation_0-logloss:0.05677\n",
+      "[92]\tvalidation_0-logloss:0.05670\n",
+      "[93]\tvalidation_0-logloss:0.05663\n",
+      "[94]\tvalidation_0-logloss:0.05682\n",
+      "[95]\tvalidation_0-logloss:0.05685\n",
+      "[96]\tvalidation_0-logloss:0.05667\n",
+      "[97]\tvalidation_0-logloss:0.05693\n",
+      "[98]\tvalidation_0-logloss:0.05671\n",
+      "[99]\tvalidation_0-logloss:0.05689\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.99      0.96      0.98       415\n",
-      "           1       0.96      0.99      0.98       385\n",
+      "           0       0.99      0.97      0.98       415\n",
+      "           1       0.97      0.99      0.98       385\n",
       "\n",
       "    accuracy                           0.98       800\n",
       "   macro avg       0.98      0.98      0.98       800\n",
       "weighted avg       0.98      0.98      0.98       800\n",
       "\n",
-      "Accuracy: 0.9762\n",
+      "Accuracy: 0.9800\n",
       "Confusion Matrix:\n",
-      "[[399  16]\n",
-      " [  3 382]]\n"
+      "[[404  11]\n",
+      " [  5 380]]\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "de02cd3a-5c01-45ab-bd86-cab9a7b4c673",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature importances: [0.2773674  0.00653246 0.02009208 ... 0.         0.         0.        ]\n"
+      "Feature importances: [0.2633692  0.00457201 0.01939864 ... 0.00726019 0.         0.        ]\n"
      ]
     }
    ],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "37496291-9dca-45bd-b1f2-60b6077bd63a",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "id": "d264f05e-37db-47e8-8712-10f6ea3716a6",
    "metadata": {},
    "outputs": [
@@ -349,11 +349,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classic Room - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Classic Room\" (score=1.00)\n",
-      "CLASSIC ROOM ADA - ROOM ONLY → **MATCH** with \"Classic Room\" (score=0.99)\n",
+      "Classic Room - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Classic Room\" (score=0.99)\n",
+      "CLASSIC ROOM ADA - ROOM ONLY → **MATCH** with \"Classic Room\" (score=1.00)\n",
       "SUPERIOR ROOM ADA - ROOM ONLY → **MATCH** with \"Superior Room\" (score=0.76)\n",
       "Superior Room - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Superior Room\" (score=1.00)\n",
-      "Superior City View - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Superior Room with City View\" (score=0.33)\n",
+      "Superior City View - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Superior Room with City View\" (score=0.16)\n",
       "Balcony Room - Olympic Queen Bed - ROOM ONLY → **MATCH** with \"Balcony Room\" (score=1.00)\n"
      ]
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "id": "e2e87ba7-f3f4-4719-b6ad-67e560dbb459",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        " 'Balcony Room - Olympic Queen Bed - ROOM ONLY']"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "id": "777c38d3-2b08-407b-bcec-44ae87374c37",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        " 'Junior Suite - Disability Access']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
